# mathassistant

./: .gitignore  openclaw-integration-design.md  pyproject.toml  test_manual.py
src/mathassistant/: __init__.py  __main__.py  config.py  git_sync.py  ingest.py  lint.py  models.py  project.py  server.py  summarizer.py
src/mathassistant/llm/: base.py  claude.py  gemini.py  http_generic.py  openai_backend.py
src/mathassistant/openclaw/: __init__.py  client.py
src/mathassistant/quality/: checker.py  checks.py  models.py
src/mathassistant/refinement/: detector.py  drafter.py  loop.py
src/mathassistant/storage/: discussion.py  frontmatter.py  index.py  log.py  problem.py
tests/: conftest.py  test_discussion.py  test_frontmatter.py  test_git_sync.py  test_log_index_lint.py  test_quality_checker.py  test_refinement_loop.py
